v1.1.3
    Enhancements:
        - Updated packages

v1.1.2
    Deprecations:
        - Removed support for Python 3.8
        - Removed obsolete endpoints
    Enhancements:
        - Updated packages
        - Fixed docstrings

v1.1.1
    Enhancements:
        - Updated tests and removed obsolete code

v1.1.0
    Deprecations:
        Removed support for Python 3.7
    Enhancements:
        - Updated Packages and fixed tests

v1.0.4
    Enhancements:
        - Updated Packages and fixed tests

 v1.0.3
    Enhancements:
        - Added notices.txt for OSS attribution
        - Moved xmlrunner import

v1.0.2
    Enhancements:
        - Pinned werkzeug to 2.3.8 to avoid security vulnerabilities.

v1.0.1
	Enhancements:
		- Allowed skipVerification a new optional input field in /link_card.
	New Features:
		- Added support for new Endpoint /create_cko_testing_token.
		- Added support for new Endpoint /refund_debit_card.

v0.2.53
Enhancements:
    - Fixed security vulnerabilities
    - Added missing Flask dependency

v0.2.52
Enhancements:
    - Removed the pysha3 package.
    - Upgraded package dependencies.
    - Removed support for Python 3.6.


v0.2.51
	Enhancements:
		- Endpoint /register_wallet has a new optional parameter "statements_enabled" in request and response.
		- Endpoint /update_wallet has a new optional parameter "statements_enabled" in request and response.
		- Endpoint /get_wallet has a new key "statements_enabled" in response.
		- Endpoint /get_wallets has a new key "statements_enabled" in response.
		- Endpoint /open_virtual_account has a new optional parameter "statements_enabled" in request and response.
		- Endpoint /update_virtual_account has a new optional parameter "statements_enabled" in request and response.
		- Endpoint /close_virtual_account has a new key "statements_enabled" in response.
		- Endpoint /delete_card has "provider" as a new mandatory parameter.
	New Features:
		- Added support for new Endpoint /statements.