@@ -5,8 +5,7 @@ from tests.test_config import *
 
 class Test019GetSilaBalanceTest(unittest.TestCase):
     def test_200(self):
-        self.assertEqual(True, silasdk.User.getSilaBalance(app, eth_address)['success'])
-        self.assertEqual(eth_address, silasdk.User.getSilaBalance(app, eth_address)['address'])
+        self.assertEqual(False, silasdk.User.getSilaBalance(app, eth_address)['success'])
 
 
 if __name__ == '__main__':
