@@ -1,4 +1,6 @@
 v1.1.3
+    Deprecations:
+        - Added deprecation warning for getSilaBalance
     Enhancements:
         - Updated packages
 
